<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team9.focus.activities.CreateScheduleActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_create_schedule" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:fillViewport="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/scheduleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="60dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Schedule Name" />

            <TextView
                android:id="@+id/timeslotTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/scheduleName"
                android:layout_marginStart="18dp"
                android:text="Timeslots"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <Button
                android:id="@+id/createTimeslotButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Timeslot"
                android:layout_alignBaseline="@+id/timeslotTitle"
                android:layout_alignBottom="@+id/timeslotTitle"
                android:layout_alignParentEnd="true" />

            <LinearLayout
                android:id="@+id/timeslotListLayout"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="200dip"
                android:layout_below="@+id/createTimeslotButton"
                android:layout_alignParentStart="true">

                <ListView
                    android:id="@+id/timeslotListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_alignParentStart="true"/>

            </LinearLayout>

            <TextView
                android:id="@+id/profileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/timeslotListLayout"
                android:layout_marginStart="18dp"
                android:text="Profiles"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <LinearLayout
                android:id="@+id/profileListLayout"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="200dip"
                android:layout_weight="0.1"
                android:layout_below="@+id/profileTitle"
                android:layout_alignParentStart="true">

                <ListView
                    android:id="@+id/profileListView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_alignParentStart="true" />

            </LinearLayout>
            <TextView
                android:id="@+id/calendarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/profileListLayout"
                android:layout_marginStart="18dp"
                android:text="Calendars"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <LinearLayout
                android:id="@+id/calendarListLayout"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="200dip"
                android:layout_weight="0.1"
                android:layout_below="@+id/calendarTitle"
                android:layout_alignParentStart="true">

                <ListView
                    android:id="@+id/calendarListView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_alignParentStart="true" />

            </LinearLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/calendarListLayout"
                android:layout_marginTop="16dp"
                android:text="Save" />

        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
